# MLotsawa

./: .gitignore  README.md  app.py  en-amitabha.txt  logs.txt  lotsawa.ipynb  mlotsawa_logs.txt  sample-data.tsv  sample-data.txt
App/: README.md  requirements.txt  server.py
App/logs/: logs.txt
App/utils/: log.py  translate.py
Docs/: AggregatedData.md  BidirectionalTranslationTest.md  DualTask.md  ExplanationOfFolders.md  ModelTraining.md  PhoneticTibetanToEnglishTranslation.md  SizeSelection.md  TibetanPhoneticTransliteration.md  TibetanToEnglishTranslation.md  [WIP]DualTask.md  [wip]TibetanPhoneticTransliteration.md
Docs/Datasets/: AggregatedData.md
Docs/Experiments/: BidirectionalTranslationTest.md  ContinuedPretraining.md  LabelSmoothing.md  PreliminaryDualTask.md  TheBenefitsofCustomFinetunedTokenizersforMachineTranslation.md  TranslationWithContext.md  ValidatingDataCleaningforTranslationModelTraining.md
EvalStudy/: DataPrep.ipynb  MakeDocx.ipynb  eval_study_data.csv  eval_study_data_2.csv  evaluation_set_1.docx  evaluation_set_2.docx  evaluation_set_3.docx  evaluation_set_4.docx  notes.txt
PyPI/: README.md  check.ipynb  demo.py  pyproject.toml  setup.py  tests.py
PyPI/mlotsawa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PyPI/src/mlotsawa/: translator.py  transliterator.py  webui.py
ReactComponent/: tibetan-translator-react-component.jsx
WordpressReact/: README.md  docker-compose.yml
app/: app.py  gui_layout.py  lotsawa_funcs.py
app-v1/: app.py
docs/: HyperParameters.md  ModelTraining.md
flask-app/: README.md  requirements.txt  server.py
lotsawa/: .gitignore  app.py  modeling.ipynb  process-texts.ipynb
notebooks/: data-cleaning-and-preprocessing.ipynb  data-collection.ipynb  ocr.ipynb  prep-test-page.ipynb  push-to-hub.ipynb  t5-results.ipynb  testing.ipynb  trans-test.ipynb  translating.ipynb  transliterate.ipynb
poc-desktop-app-v0/: app.py
pypi-module/: README.md  pyproject.toml  tests.py
reports/: ARCHITECTURESELECTION.md
scraping-and-process-scripts/: create-mini-batches.py  download-pdfs.py
thl_phonetic_transliteration/: README.md  pyproject.toml
thl_phonetic_transliteration/src/thl_phonetic_transliteration/: converter.py  transliterator.py
thl_phonetic_transliteration/src/thl_phonetic_transliteration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
unsupervised-scripture-classification/: mahayana-excerpts.txt  scripture-classification.ipynb  theravada-excerpts.txt  vajrayana-excerpts.txt
(+548 files in other folders)
