[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "flask",
  "transformers",
  "threading",
  "waitress",
  "webbrowser"
]
name = "mlotsawa"
version = "0.4.2"
authors = [
  { name="Jacob Moore", email="billingsmoore@gmail.com" },
]
description = "The purpose of this module is user-friendly translation and transliteration of Classical Tibetan."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/billingsmoore/MLotsawa"
Issues = "https://github.com/billingsmoore/MLotsawa/issues"