[build-system]
requires = ["setuptools==68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "flask",
  "transformers",
  "threading",
  "torch",
  "waitress",
  "webbrowser"
]
name = "mlotsawa"
version = "1.0.0"
authors = [
  { name="Jacob Moore", email="billingsmoore@gmail.com" },
]
description = "The purpose of this module is user-friendly translation and transliteration of Classical Tibetan."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = ["src/**", "README.md", "LICENSE"]

[project.urls]
Homepage = "https://github.com/billingsmoore/MLotsawa"
Issues = "https://github.com/billingsmoore/MLotsawa/issues"