[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
    "transformers"
]
name = "thl_phonetic_transliteration"
version = "0.2.3"
authors = [
  { name="billingsmoore", email="billingsmoore@gmail.com" },
]
description = "The goal of this code is to provide a library to convert Tibetan unicode and Wylie transliterations to THL Simplified Phonetic Transliteration."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/billingsmoore/MLotsawa"
Issues = "https://github.com/billingsmoore/MLotsawa/issues"